# ephemeris

./: .gitignore  Cargo.toml  README.md
ephem_derive/: Cargo.toml
ephem_derive/src/: lib.rs
src/: base.rs  coords.rs  lib.rs  macros.rs
src/base/: angle.rs  consts.rs  error.rs  linalg.rs
tests/: angle_tests.rs  base_tests.rs  linalg_test.rs
tests/common/: mod.rs
