[package]
name = "ephem"
version = "0.1.0-alpha"
description = "Library for determining the ephemeris of heavenly bodies"
authors = ["Roman A. Voronkin <roman.voronkin@gmail.com>"]
license-file = "LICENSE"
edition = "2018"

[workspace]

[lib]
name = "ephem"

[dependencies]
chrono = "0.4"
ephem_derive = { path = "ephem_derive" }
num-traits = "0.2.14"

[dev-dependencies]
approx = "0.3.2"
rand = "0.8.0"