[package]
name = "ephem"
version = "0.1.0-alpha1"
description = "Library for determining the ephemeris of heavenly bodies"
authors = ["Roman A. Voronkin <roman.voronkin@gmail.com>"]
license-file = "LICENSE"
edition = "2018"

[workspace]
members = ["ephem_derive"]

[lib]
name = "ephem"

[dependencies]
chrono = "0.4"
ephem_derive = { version = "0.1.0-alpha", path = "ephem_derive" }
num-traits = "0.2.14"
serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
approx = "0.3.2"
rand = "0.8.0"